// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`imgui skin inspector test show value test show default value 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-asset"
  >
    <article
      className="wonder-imguiSkin-inspector"
    >
      <h1>
        IMGUI Skin
      </h1>
      <hr />
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="imgui skin's name"
        >
          Name
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="New IMGUISkin"
          />
        </div>
      </article>
      <article
        className="wonder-imguiSkinButton-inspector"
      >
        <h2>
          Button
        </h2>
        <hr />
        <div
          className="imguiSkinButton-skin"
        >
          <article
            className="color-pick"
          >
            <div
              className="item-header"
              title="button color"
            >
              Button Color
            </div>
            <div
              className="item-content item-color"
            >
              <div
                className="color-hex"
                onClick={[Function]}
                style={
                  Object {
                    "background": "#591919",
                  }
                }
              />
              <div
                className="color-select"
                onClick={[Function]}
              >
                <img
                  src="./public/img/color.png"
                />
              </div>
            </div>
          </article>
          <article
            className="color-pick"
          >
            <div
              className="item-header"
              title="hover button color"
            >
              Hover Button Color
            </div>
            <div
              className="item-content item-color"
            >
              <div
                className="color-hex"
                onClick={[Function]}
                style={
                  Object {
                    "background": "#661919",
                  }
                }
              />
              <div
                className="color-select"
                onClick={[Function]}
              >
                <img
                  src="./public/img/color.png"
                />
              </div>
            </div>
          </article>
          <article
            className="color-pick"
          >
            <div
              className="item-header"
              title="click button color"
            >
              Click Button Color
            </div>
            <div
              className="item-content item-color"
            >
              <div
                className="color-hex"
                onClick={[Function]}
                style={
                  Object {
                    "background": "#7f1919",
                  }
                }
              />
              <div
                className="color-select"
                onClick={[Function]}
              >
                <img
                  src="./public/img/color.png"
                />
              </div>
            </div>
          </article>
          <article
            className="inspector-item"
          >
            <div
              className="item-header"
              title="button image"
            >
              Button Image
            </div>
            <div
              className="item-content item-texture"
            >
              <div
                className="texture-img"
                onClick={[Function]}
                style={
                  Object {
                    "opacity": "1",
                  }
                }
              >
                <div
                  className="img-dragBg"
                  onDragEnter={[Function]}
                  onDragLeave={[Function]}
                  onDragOver={[Function]}
                  onDrop={[Function]}
                />
              </div>
              <button
                className="texture-remove"
                onClick={[Function]}
              >
                Remove
              </button>
            </div>
          </article>
          <article
            className="inspector-item"
          >
            <div
              className="item-header"
              title="hover button image"
            >
              Hover Button Image
            </div>
            <div
              className="item-content item-texture"
            >
              <div
                className="texture-img"
                onClick={[Function]}
                style={
                  Object {
                    "opacity": "1",
                  }
                }
              >
                <div
                  className="img-dragBg"
                  onDragEnter={[Function]}
                  onDragLeave={[Function]}
                  onDragOver={[Function]}
                  onDrop={[Function]}
                />
              </div>
              <button
                className="texture-remove"
                onClick={[Function]}
              >
                Remove
              </button>
            </div>
          </article>
          <article
            className="inspector-item"
          >
            <div
              className="item-header"
              title="click button image"
            >
              Click Button Image
            </div>
            <div
              className="item-content item-texture"
            >
              <div
                className="texture-img"
                onClick={[Function]}
                style={
                  Object {
                    "opacity": "1",
                  }
                }
              >
                <div
                  className="img-dragBg"
                  onDragEnter={[Function]}
                  onDragLeave={[Function]}
                  onDragOver={[Function]}
                  onDrop={[Function]}
                />
              </div>
              <button
                className="texture-remove"
                onClick={[Function]}
              >
                Remove
              </button>
            </div>
          </article>
          <article
            className="inspector-item wonder-int-input"
          >
            <div
              className="item-header component-label"
              onMouseDown={[Function]}
              onMouseMove={[Function]}
              onMouseUp={[Function]}
              title="font align"
            >
              Font Align
            </div>
            <div
              className="item-content"
            >
              <input
                className="input-component int-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </div>
          </article>
          <article
            className="color-pick"
          >
            <div
              className="item-header"
              title="font color"
            >
              Font Color
            </div>
            <div
              className="item-content item-color"
            >
              <div
                className="color-hex"
                onClick={[Function]}
                style={
                  Object {
                    "background": "#ffffff",
                  }
                }
              />
              <div
                className="color-select"
                onClick={[Function]}
              >
                <img
                  src="./public/img/color.png"
                />
              </div>
            </div>
          </article>
        </div>
        <button
          onClick={[Function]}
        >
          submit all
        </button>
      </article>
      <article
        className="wonder-textAreaInput"
      >
        <div
          className="content-field content-textarea"
        >
          <div
            className="field-title"
          >
            AllCustomStyleData
          </div>
          <div
            className="field-content"
          >
            <textarea
              className="input-component"
              onChange={[Function]}
              type="text"
              value="{}"
            />
          </div>
        </div>
      </article>
      <button
        onClick={[Function]}
      >
        submit all
      </button>
    </article>
  </article>
</article>
`;

exports[`imgui skin inspector test show value test show specific value 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-asset"
  >
    <article
      className="wonder-imguiSkin-inspector"
    >
      <h1>
        IMGUI Skin
      </h1>
      <hr />
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="imgui skin's name"
        >
          Name
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="aaa"
          />
        </div>
      </article>
      <article
        className="wonder-imguiSkinButton-inspector"
      >
        <h2>
          Button
        </h2>
        <hr />
        <div
          className="imguiSkinButton-skin"
        >
          <article
            className="color-pick"
          >
            <div
              className="item-header"
              title="button color"
            >
              Button Color
            </div>
            <div
              className="item-content item-color"
            >
              <div
                className="color-hex"
                onClick={[Function]}
                style={
                  Object {
                    "background": "#ff0000",
                  }
                }
              />
              <div
                className="color-select"
                onClick={[Function]}
              >
                <img
                  src="./public/img/color.png"
                />
              </div>
            </div>
          </article>
          <article
            className="color-pick"
          >
            <div
              className="item-header"
              title="hover button color"
            >
              Hover Button Color
            </div>
            <div
              className="item-content item-color"
            >
              <div
                className="color-hex"
                onClick={[Function]}
                style={
                  Object {
                    "background": "#00ff00",
                  }
                }
              />
              <div
                className="color-select"
                onClick={[Function]}
              >
                <img
                  src="./public/img/color.png"
                />
              </div>
            </div>
          </article>
          <article
            className="color-pick"
          >
            <div
              className="item-header"
              title="click button color"
            >
              Click Button Color
            </div>
            <div
              className="item-content item-color"
            >
              <div
                className="color-hex"
                onClick={[Function]}
                style={
                  Object {
                    "background": "#0000ff",
                  }
                }
              />
              <div
                className="color-select"
                onClick={[Function]}
              >
                <img
                  src="./public/img/color.png"
                />
              </div>
            </div>
          </article>
          <article
            className="inspector-item"
          >
            <div
              className="item-header"
              title="button image"
            >
              Button Image
            </div>
            <div
              className="item-content item-texture"
            >
              <div
                className="texture-img"
                onClick={[Function]}
                style={
                  Object {
                    "opacity": "1",
                  }
                }
              >
                <div
                  className="img-dragBg"
                  onDragEnter={[Function]}
                  onDragLeave={[Function]}
                  onDragOver={[Function]}
                  onDrop={[Function]}
                />
                <img
                  src="newImgBase64"
                />
              </div>
              <button
                className="texture-remove"
                onClick={[Function]}
              >
                Remove
              </button>
            </div>
          </article>
          <article
            className="inspector-item"
          >
            <div
              className="item-header"
              title="hover button image"
            >
              Hover Button Image
            </div>
            <div
              className="item-content item-texture"
            >
              <div
                className="texture-img"
                onClick={[Function]}
                style={
                  Object {
                    "opacity": "1",
                  }
                }
              >
                <div
                  className="img-dragBg"
                  onDragEnter={[Function]}
                  onDragLeave={[Function]}
                  onDragOver={[Function]}
                  onDrop={[Function]}
                />
              </div>
              <button
                className="texture-remove"
                onClick={[Function]}
              >
                Remove
              </button>
            </div>
          </article>
          <article
            className="inspector-item"
          >
            <div
              className="item-header"
              title="click button image"
            >
              Click Button Image
            </div>
            <div
              className="item-content item-texture"
            >
              <div
                className="texture-img"
                onClick={[Function]}
                style={
                  Object {
                    "opacity": "1",
                  }
                }
              >
                <div
                  className="img-dragBg"
                  onDragEnter={[Function]}
                  onDragLeave={[Function]}
                  onDragOver={[Function]}
                  onDrop={[Function]}
                />
              </div>
              <button
                className="texture-remove"
                onClick={[Function]}
              >
                Remove
              </button>
            </div>
          </article>
          <article
            className="inspector-item wonder-int-input"
          >
            <div
              className="item-header component-label"
              onMouseDown={[Function]}
              onMouseMove={[Function]}
              onMouseUp={[Function]}
              title="font align"
            >
              Font Align
            </div>
            <div
              className="item-content"
            >
              <input
                className="input-component int-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="2"
              />
            </div>
          </article>
          <article
            className="color-pick"
          >
            <div
              className="item-header"
              title="font color"
            >
              Font Color
            </div>
            <div
              className="item-content item-color"
            >
              <div
                className="color-hex"
                onClick={[Function]}
                style={
                  Object {
                    "background": "#ff0000",
                  }
                }
              />
              <div
                className="color-select"
                onClick={[Function]}
              >
                <img
                  src="./public/img/color.png"
                />
              </div>
            </div>
          </article>
        </div>
        <button
          onClick={[Function]}
        >
          submit all
        </button>
      </article>
      <article
        className="wonder-textAreaInput"
      >
        <div
          className="content-field content-textarea"
        >
          <div
            className="field-title"
          >
            AllCustomStyleData
          </div>
          <div
            className="field-content"
          >
            <textarea
              className="input-component"
              onChange={[Function]}
              type="text"
              value="{\\"s1\\":{\\"c1\\":1}}"
            />
          </div>
        </div>
      </article>
      <button
        onClick={[Function]}
      >
        submit all
      </button>
    </article>
  </article>
</article>
`;
